broken UI fixed

--- a/css/wrioos.css
+++ b/css/wrioos.css
@@ -180,7 +180,6 @@ div#sidebar.navbar-fixed-top{height:100vh;overflow-y:scroll}
 /* END */
 
 .loading{width:64px;height:64px}
-.tooltip{display:inline}
 
 /* Twitter */
 .timeline-Tweet:hover{background-color:transparent!important}
